name:                SFML
version:             2.3.2.4
synopsis:            SFML bindings
description:
    Low level bindings for SFML 2.3.2.
license:             MIT
license-file:        LICENSE
author:              Marc Sunet
maintainer:          jeannekamikaze@gmail.com
homepage:            https://github.com/jeannekamikaze/SFML
bug-reports:         https://github.com/jeannekamikaze/SFML/issues
category:            Game
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/SFML-haskell/SFML

Flag OfficialCSFMLForWindows
  Description: Use the official CSFML bundle for Windows from http://www.sfml-dev.org/download/csfml/
  default: False


library
  hs-source-dirs:
      src

  exposed-modules:
      SFML.Audio
      SFML.Graphics
      SFML.System
      SFML.Window
      SFML.Audio.Listener
      SFML.Audio.Music
      SFML.Audio.SFSampled
      SFML.Audio.SFSound
      SFML.Audio.SFSoundBuffer
      SFML.Audio.SFSoundRecorder
      SFML.Audio.Sound
      SFML.Audio.SoundBuffer
      SFML.Audio.SoundBufferRecorder
      SFML.Audio.SoundRecorder
      SFML.Audio.SoundStatus
      SFML.Audio.SoundStream
      SFML.Audio.Types
      SFML.Graphics.BlendMode
      SFML.Graphics.CircleShape
      SFML.Graphics.Color
      SFML.Graphics.ConvexShape
      SFML.Graphics.Font
      SFML.Graphics.FontInfo
      SFML.Graphics.Glyph
      SFML.Graphics.Image
      SFML.Graphics.PrimitiveType
      SFML.Graphics.Rect
      SFML.Graphics.RectangleShape
      SFML.Graphics.RenderStates
      SFML.Graphics.RenderTexture
      SFML.Graphics.RenderWindow
      SFML.Graphics.SFBindable
      SFML.Graphics.SFBounded
      SFML.Graphics.SFDrawable
      SFML.Graphics.SFCoordSpace
      SFML.Graphics.SFRenderTarget
      SFML.Graphics.SFShape
      SFML.Graphics.SFShapeResizable
      SFML.Graphics.SFSmoothTexture
      SFML.Graphics.SFTexturable
      SFML.Graphics.SFTransformable
      SFML.Graphics.SFViewable
      SFML.Graphics.Shader
      SFML.Graphics.Shape
      SFML.Graphics.Sprite
      SFML.Graphics.Text
      SFML.Graphics.Texture
      SFML.Graphics.Transform
      SFML.Graphics.Types
      SFML.Graphics.Vertex
      SFML.Graphics.VertexArray
      SFML.Graphics.View
      SFML.SFCopyable
      SFML.SFDisplayable
      SFML.SFException
      SFML.SFResource
      SFML.System.Clock
      SFML.System.InputStream
      SFML.System.Sleep
      SFML.System.Time
      SFML.System.Vector2
      SFML.System.Vector3
      SFML.Utils
      SFML.Window.Context
      SFML.Window.ContextSettings
      SFML.Window.Event
      SFML.Window.Joystick
      SFML.Window.JoystickIdentification
      SFML.Window.Keyboard
      SFML.Window.Mouse
      SFML.Window.SFWindow
      SFML.Window.Types
      SFML.Window.VideoMode
      SFML.Window.Window
      SFML.Window.WindowHandle

  c-sources:
      cbits/SFML/Audio/Listener_helper.c
      cbits/SFML/Audio/Music_helper.c
      cbits/SFML/Audio/Sound_helper.c
      cbits/SFML/Audio/SoundBuffer_helper.c
      cbits/SFML/Audio/SoundStream_helper.c
      cbits/SFML/Graphics/CircleShape_helper.c
      cbits/SFML/Graphics/ConvexShape_helper.c
      cbits/SFML/Graphics/Font_helper.c
      cbits/SFML/Graphics/Image_helper.c
      cbits/SFML/Graphics/RectangleShape_helper.c
      cbits/SFML/Graphics/RenderTexture_helper.c
      cbits/SFML/Graphics/RenderWindow_helper.c
      cbits/SFML/Graphics/Shader_helper.c
      cbits/SFML/Graphics/Shape_helper.c
      cbits/SFML/Graphics/Sprite_helper.c
      cbits/SFML/Graphics/Text_helper.c
      cbits/SFML/Graphics/Texture_helper.c
      cbits/SFML/Graphics/VertexArray_helper.c
      cbits/SFML/Graphics/View_helper.c
      cbits/SFML/System/Clock_helper.c
      cbits/SFML/System/Time_helper.c
      cbits/SFML/System/Sleep_helper.c
      cbits/SFML/Window/Joystick_helper.c
      cbits/SFML/Window/VideoMode_helper.c
      cbits/SFML/Window/Window_helper.c

  build-depends:
      base > 4 && < 5

  build-tools:
      hsc2hs -any

  extensions:
      ForeignFunctionInterface
      DeriveDataTypeable

  if os(windows)
      extra-libraries:
          csfml-window,
          csfml-system,
          csfml-graphics,
          csfml-network,
          csfml-audio
  else
      extra-libraries:
          csfml-window,
          csfml-system,
          csfml-graphics,
          csfml-network,
          csfml-audio,
          sfml-window,
          sfml-system,
          sfml-graphics,
          sfml-network,
          sfml-audio
