name: sfml-demos
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: SFML demos
category: Game
author: Marc Sunet
data-dir: ""
data-files:         hello/DST-BreakOut.ogg, hello/Haskell-Logo.png, hello/Vera.ttf
 
executable sfml-window
    hs-source-dirs:     window
    build-depends:      base, SFML
    main-is:            main.hs
    buildable:          True
    ghc-options:        -debug

executable sfml-time
    hs-source-dirs:     time
    build-depends:      base, SFML
    main-is:            main.hs
    buildable:          True
    ghc-options:        -debug

executable sfml-transform
    hs-source-dirs:     transform
    build-depends:      base, SFML
    main-is:            main.hs
    buildable:          True
    ghc-options:        -debug

executable sfml-hello
    hs-source-dirs:     hello
    build-depends:      base, SFML
    main-is:            main.hs
    buildable:          True
    ghc-options:        -debug

