name: sfml-demos
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: "LICENSE"
synopsis: SFML demos
category: Game
author: Marc Sunet
data-dir: assets
data-files:         DST-BreakOut.ogg, Haskell-Logo.png, Vera.ttf
 
executable sfml-window
    hs-source-dirs:     window
    build-depends:      base, SFML
    main-is:            main.hs
    buildable:          True
    ghc-options:        -debug

executable sfml-time
    hs-source-dirs:     time
    build-depends:      base, SFML
    main-is:            main.hs
    buildable:          True
    ghc-options:        -debug

executable sfml-transform
    hs-source-dirs:     transform
    build-depends:      base, SFML
    main-is:            main.hs
    buildable:          True
    ghc-options:        -debug

executable sfml-hello
    hs-source-dirs:     hello
    build-depends:      base, SFML
    main-is:            main.hs
    other-modules:      Paths_sfml_demos
    buildable:          True
    ghc-options:        -debug

executable sfml-events
    hs-source-dirs:     events
    build-depends:      base, SFML
    main-is:            main.hs
    other-modules:      Paths_sfml_demos
    buildable:          True
    ghc-options:        -debug

executable sfml-unicode
    hs-source-dirs:     unicode
    build-depends:      base, SFML
    main-is:            main.hs
    other-modules:      Paths_sfml_demos
    buildable:          True
    ghc-options:        -debug

